<resources>
    <string name="app_name">lion-nav-bar+homepage</string>
    <string name="menu_home">Home</string>
    <string name="menu_facilities">Facilities</string>
    <string name="menu_doctors">Doctors</string>
    <string name="menu_Book_Appointment">Book Appointment</string>
    <string name="menu_covid">"Covid corner "</string>
    <string name="menu_gallery">Gallary</string>
    <string name="menu_about">About Us</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_logout">logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">home_fragment</string>
    <string name="hello_appointment_fragment">appointment fragment</string>
    <string name="about_us">About us</string>
    <string name="our_team">Our Team</string>
    <string name="Specialization">doctor spec</string>
    <string name="Register">Register</string>
    <string name="Guest" />
    <string name="guest">Guest</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_intro">login</string>
    <string name="title_activity_login_tab">LoginTabActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_Book_Vaccine">Vaccines</string>
    <string name="tab1">Requests</string>
    <string name="tab2">Certificates</string>
    <string name="ntab1">Health</string>
    <string name="ntab2">LCGH</string>
    <string name="news">News</string>
    <string name="global">"Global "</string>
    <string name="india">India</string>
    <string name="live">Live Map</string>
    <string name="help">Help</string>
    <string name="livedata">Live Data</string>
    <string name="corona_help_title">How to fight corona virus?</string>

    <string name="corona_five_step">Wash your hands regularly for 20 seconds, with soap and water or alcohol-based hand rub.
    \n\nCover your nose and mouth with a disposable tissue or flexed elbow when you cough or sneeze.
    \n\nAvoid close contact (1 meter or 3 feet) with people who are unwell.
    \n\nDon\'t touch your eyes, nose, or mouth if your hands are not clean.
    \n\nStay home and self-isolate from others in the household if you feel unwell.</string>
    <string name="corona_info_title">Novel COVID-19 (Corona) Virus</string>

    <string name="corona_info_one">Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus.
        \n\nMost people infected with the COVID-19 virus will experience mild to moderate respiratory illness and
        recover without requiring special treatment.  Older people, and those with underlying medical
        problems like cardiovascular disease, diabetes, chronic respiratory disease, and cancer are
        more likely to develop serious illness.
        \n\nThe best way to prevent and slow down transmission is be well
        informed about the COVID-19 virus, the
        disease it causes and how it spreads. Protect yourself and others from infection by washing
        your hands or using an alcohol based rub frequently and not touching your face.
        </string>

    <string name="corona_info_two">
        The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose
        when an infected person coughs or sneezes, so it’s important that you also practice respiratory
        etiquette (for example, by coughing into a flexed elbow).
        \n\nAt this time, there are no specific vaccines or treatments for
        COVID-19. However, there are many ongoing clinical trials evaluating potential treatments.
        WHO will continue to provide updated
        information as soon as clinical findings become available.</string>

    <string name="corona_info_three">
        The COVID-19 virus spreads primarily through droplets of saliva or discharge from the nose
        when an infected person coughs or sneezes, so it’s important that you also practice respiratory
        etiquette (for example, by coughing into a flexed elbow).
        \n\nAt this time, there are no specific vaccines or treatments for
        COVID-19. However, there are many ongoing clinical trials evaluating potential treatments.
        WHO will continue to provide updated
        information as soon as clinical findings become available.</string>

    <string name="image_credit">Image Credit Ecohealth Alliance</string>
    <string name="corona_symptoms_title">Symptoms</string>
    <string name="corona_symptoms_info">The most common symptoms of COVID-19 are fever, tiredness,
        and dry cough. Some patients may have aches and pains, nasal congestion, runny nose, sore
        throat or diarrhea. These symptoms are usually mild and begin gradually. Some people become
        infected but don’t develop any symptoms and don\'t feel unwell.People with fever, cough and difficulty breathing
        should seek medical attention.</string>

    <string name="corona_info_credit">NOTE : All information shown here has been taken from WHO\'s official website.
    Refer to the links below for more information on Corona virus.</string>

    <string name="corona_more_info">WHO Corona Virus Outbreak :\n<a href="https://www.who.int/health-topics/coronavirus">https://www.who.int/health-topics/coronavirus</a>
    \n\nWHO Corona Q&amp;A :\n<a href="https://www.who.int/news-room/q-a-detail/q-a-coronaviruses">https://www.who.int/news-room/q-a-detail/q-a-coronaviruses</a></string>
    <string name="menu_lions">Lions Assistant</string>

    <string name="my_text"><u>View Profile</u>.</string>
    <string name="adduser">addUser</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tue">Tue</string>
    <string name="Wed">Wed</string>
    <string name="Thur">Thur</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>

</resources>