<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doctor.EditDoctor">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Name"
        app:layout_constraintBottom_toTopOf="@id/editText2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="id"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintBottom_toTopOf="@id/editText3"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText3"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="spec"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editText4"
        />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="about"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintBottom_toTopOf="@id/editText5"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText5"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="exp"
        app:layout_constraintTop_toBottomOf="@id/editText4"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="110dp"
        app:layout_constraintBottom_toTopOf="@id/editText6"/>
    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="lang"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toBottomOf="@id/editText5"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="110dp"
        app:layout_constraintBottom_toTopOf="@id/editText7" />
    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="fee"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toBottomOf="@id/editText6"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="110dp"
        app:layout_constraintBottom_toTopOf="@id/avlbox"/>
    <LinearLayout
        android:id="@+id/avlbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText6"
        app:layout_constraintBottom_toTopOf="@id/avlcontainer"
        >

        <TextView
            android:id="@+id/avl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Availability:"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:id="@+id/days"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>
        <HorizontalScrollView
            android:id="@+id/avlcontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avlbox"
            app:layout_constraintBottom_toTopOf="@id/timeslotcontainer">
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"

        android:orientation="horizontal"
      >

        <Button
            android:id="@+id/sun"
            android:layout_width="51.5dp"
            android:layout_height="48dp"
            android:text="@string/Sun"
            android:gravity="center"
            android:textSize="8sp"
            android:minHeight="20dp"/>
        <Button
            android:id="@+id/mon"
            android:layout_width="53dp"
            android:layout_height="48dp"
            android:text="@string/Mon"
            android:gravity="center"
            android:textSize="8sp"/>
        <Button
            android:id="@+id/tue"
            android:layout_width="51.5dp"
            android:layout_height="48dp"
            android:text="@string/Tue"
            android:gravity="center"
            android:textSize="8sp"/>
        <Button
            android:id="@+id/wed"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:text="@string/Wed"
            android:gravity="center"
            android:textSize="7.5sp"
            android:minHeight="20dp"/>
        <Button
            android:id="@+id/thur"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:text="@string/Thur"
            android:gravity="center"
            android:textSize="8sp"
            android:minHeight="20dp"/>
        <Button
            android:id="@+id/fri"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:text="@string/Fri"
            android:gravity="center"
            android:textSize="7.5sp"
            android:minHeight="20dp"/>
        <Button
            android:id="@+id/sat"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:text="@string/Sat"
            android:gravity="center"
            android:textSize="7.5sp"
            android:minHeight="20dp"/>
    </LinearLayout>
        </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/timeslotcontainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avlcontainer" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Time Slot:"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/slots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeslotcontainer">
        <CheckBox
            android:id="@+id/slot1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="30dp"
            android:text="9-12  "
            android:textSize="18dp"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/slot2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="2-5  "
            android:textSize="18dp"
            android:layout_marginRight="30dp"
            android:textStyle="bold"/>
        <CheckBox
            android:id="@+id/slot3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="6-9  "
            android:textSize="18dp"

            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slots"
        app:layout_constraintVertical_bias="0.32999998" />


    <ImageView
        android:id="@+id/img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>